# gideon

./: CMakeLists.txt  README.md
blender/: __init__.py  engine.py  mesh.py  properties.py  render.py  scene.py  sync.py  ui.py
cmake/: external.cmake
examples/: demo_shaders.gdl  depth_render.gdl  diagnostic.gdl  full_render.gdl  path_tracer.gdl  test_distributions.gdl  texture_demo.gdl
include/compiler/: debug.hpp  errors.hpp  gd_std.hpp  gen_state.hpp  llvm_helper.hpp  lookup.hpp  operations.hpp  parser.hpp  rendermodule.hpp  symboltable.hpp  type_conversion.hpp  types.hpp  value.hpp
include/compiler/ast/: alias.hpp  assignment.hpp  ast.hpp  control.hpp  distribution.hpp  error.hpp  expression.hpp  function.hpp  global.hpp  literal.hpp  module.hpp  node.hpp  statement.hpp  typename.hpp  variable.hpp
include/compiler/types/: array.hpp  primitive.hpp  special.hpp  vector.hpp
include/engine/: context.hpp
include/geometry/: aabb.hpp  ray.hpp  triangle.hpp
include/math/: differential.hpp  random.hpp  sampling.hpp  transform.hpp  util.hpp  vector.hpp  vector.hpp.gch
include/scene/: attribute.hpp  attribute_reader.hpp  bvh.hpp  bvh_builder.hpp  camera.hpp  light.hpp  object.hpp  primitive.hpp  scene.hpp
include/shading/: distribution.hpp  shadetree.hpp
include/vm/: instruction.hpp  parameters.hpp  program.hpp  registers.hpp  standard.hpp  vm.hpp
src/: CMakeLists.txt  api.cpp
src/compiler/: builtin_ops.cpp  debug.cpp  errors.cpp  gd_std.cpp  gen_state.cpp  llvm_helper.cpp  lookup.cpp  operations.cpp  rendermodule.cpp  symboltable.cpp  type_conversion.cpp  types.cpp  value.cpp
src/compiler/ast/: alias.cpp  assignment.cpp  ast.cpp  control.cpp  distribution.cpp  error.cpp  expression.cpp  function.cpp  literal.cpp  module.cpp  node.cpp  statement.cpp  typename.cpp  variable.cpp
src/compiler/language/: rtlparser.y  rtlscanner.l
src/compiler/types/: array.cpp  primitive.cpp  special.cpp  vector.cpp
src/engine/: context.cpp
src/geometry/: aabb.cpp  triangle.cpp
src/math/: differential.cpp  random.cpp  sampling.cpp  transform.cpp  vector.cpp
src/scene/: attribute.cpp  bvh.cpp  bvh_builder.cpp  camera.cpp  light.cpp  object.cpp  primitive.cpp  scene.cpp
src/shading/: distribution.cpp  shadetree.cpp
src/standard/: gideon.gdl
src/vm/: instruction.cpp  parameters.cpp  registers.cpp  standard.cpp  vm.cpp
src/vm/instructions/standard/: arithmetic.cpp  attributes.cpp  control.cpp  data.cpp  debug.cpp  geometry.cpp  query.cpp  shading.cpp
tests/: array_test.gdl  conversion_test.gdl  debug_test.gdl  distribution_test.gdl  flag_test.gdl  flow_test.gdl  global_test.gdl  helper_module.gdl  load_test.gdl  module_test.gdl  operator_test.gdl  render_loop.gdl  test_main.cpp  type_test.gdl  variable_test.gdl  vector_access.gdl
